# Querty-OS

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_FIX_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  POCO_X4_PRO_DEPLOYMENT.md  QUICKSTART.md  README.md  SANDBOX_SETUP.md  SECURITY_SUMMARY.md  SETUP_QUICK_REFERENCE.md  TERMUX_SETUP.md  TESTING.md  VERIFICATION_COMPLETE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  makefile.yml  pre-commit.yml  python-app.yml
config/: querty-os.conf
core/: exceptions.py  priority.py
core/agent-automation/: __init__.py  action_executor.py  agent_automation.py
core/agent_automation/: README.md  __init__.py  action_executor.py  agent_automation.py  workflow_templates.py
core/ai-daemon/: __init__.py  daemon.py  service_manager.py  state_manager.py
core/ai_daemon/: README.md  __init__.py  daemon.py  event_bus.py  service_manager.py  state_manager.py
core/boot-profiles/: boot_profiles.py
core/boot_profiles/: __init__.py  boot_profiles.py
core/cli-api/: api.py
core/cli_api/: __init__.py  cli.py
core/input-handlers/: __init__.py  input_fusion.py  input_handlers.py
core/input_handlers/: README.md  input_fusion.py  input_handlers.py  text_parser.py
core/llm-service/: __init__.py  llm_service.py  model_loader.py  tokenizer.py
core/llm_service/: README.md  __init__.py  llm_service.py  model_loader.py  tokenizer.py
core/memory-manager/: __init__.py  memory_manager.py
core/network-manager/: __init__.py  firewall_control.py  network_manager.py  traffic_monitor.py  vpn_manager.py
core/network_manager/: README.md  __init__.py  firewall_control.py  network_manager.py  traffic_monitor.py  vpn_manager.py
core/os-control/: README.md  __init__.py  android_api.py  app_bridge.py  linux_chroot.py  os_control.py
core/os_control/: __init__.py  android_api.py  app_bridge.py  os_control.py
core/ota-manager/: ota_manager.py
core/ota_manager/: __init__.py  ota_manager.py
core/performance/: __init__.py
core/plugin-system/: __init__.py  plugin_system.py
core/plugin_system/: plugin_system.py
core/security-layer/: security_layer.py
core/security_layer/: __init__.py  security_layer.py
core/snapshot-system/: README.md  __init__.py  filesystem_snapshot.py  incremental_backup.py  snapshot_system.py
core/snapshot_system/: filesystem_snapshot.py  incremental_backup.py  rollback_manager.py  snapshot_system.py
devices/poco-x4-pro-5g/: README.md  (+1 more)
docs/: ANSWER_CAN_I_APPLY_IT.md  ARCHITECTURE.md  ARCHITECTURE_VERIFICATION.md  CI_CD_FIX_SUMMARY.md  DEPLOYMENT_READINESS.md  DEVELOPMENT.md  ENHANCEMENTS_COMPLETE.md  ERROR_HANDLING.md  IMPLEMENTATION_COMPLETE.md  MERGE_READINESS.md  NEW_REQUIREMENTS_SUMMARY.md  POCO_X4_PRO_DEPLOYMENT.md  PROJECT_SUMMARY.md  REPOSITORY_COMPLETE.md  SECURITY_SUMMARY.md  UPGRADE_SUMMARY.md
examples/: demo_complete_system.py
libs/: README.md  __init__.py
scripts/: dashboard.py  validate.py
systemd/: querty-ai-daemon.service
tests/: __init__.py
(+26 files in other folders)
